--- a/application/index/view/index/play.html
+++ b/application/index/view/index/play.html
@@ -38,7 +38,18 @@
             </div>
         </div>
         <div class="button-sp-area">
-            <a href="/play.html?url={$rtmp}" class="weui-btn weui-btn_primary">去播放</a>
+            <a href="/play.html?url={$rtmp}" class="weui-btn weui-btn_primary">play去播放rtmp格式</a>
+        </div>
+        <div class="weui-cells__title">播流地址</div>
+        <div class="weui-cells weui-cells_form">
+            <div class="weui-cell">
+                <div class="weui-cell__bd">
+                    <textarea class="weui-textarea" rows="3">{$data.rtmp}</textarea>
+                </div>
+            </div>
+        </div>
+        <div class="button-sp-area">
+            <a href="/play.html?url={$m3u8}" class="weui-btn weui-btn_primary">play去播放m3u8格式</a>
         </div>
 
         
@@ -51,7 +62,7 @@
             </div>
         </div>
         <div class="button-sp-area">
-            <a href="/play.html?url={$flv}" class="weui-btn weui-btn_primary">去播放</a>
+            <a href="/play.html?url={$flv}" class="weui-btn weui-btn_primary">play去播放flv格式</a>
         </div>
 
 
@@ -65,7 +76,7 @@
         </div>
 
         <div class="button-sp-area">
-            <a href="/sample/rtmp.html?url={$m3u8}" class="weui-btn weui-btn_primary">去播放</a>
+            <a href="/sample/rtmp.html?url={$m3u8}" class="weui-btn weui-btn_primary">sample去播放m3u8</a>
         </div>
 
 
