--- a/public/css/base.css
+++ b/public/css/base.css
@@ -1,5 +1,6 @@
+@charset "utf-8";
 /* 重置样式 */
-*{
+body,div,h1,h2,h3,h4,h5,h6,hr,p,blockquote,dl,dt,dd,ul,ol,li,pre,form,fieldset,legend,button,input,textarea,th,td,span,button{
 	margin: 0;
 	padding: 0;
 }
