--- a/application/mobile/view/play/index.html
+++ b/application/mobile/view/play/index.html
@@ -1,2 +1,27 @@
 <!-- /mobile/play/index -->
-/mobile/play/index
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>直播</title>
+    <script src="__STATIC__/js/rem.js" type="text/javascript" charset="utf-8"></script>
+    <link rel="stylesheet" type="text/css" href="__STATIC__/css/base.css" />
+    <style>
+        body{
+            background-color: #000;
+        }
+        .txt3{
+            font-size: 50px;
+    	-webkit-text-stroke: .05rem red;
+        -webkit-text-fill-color: transparent;
+        background-color: #ccc;
+    }
+    </style>
+</head>
+<body>
+    
+    <div class="txt3">小腊肉</div>
+</body>
+</html>
