--- a/application/mobile/view/index/livelist.html
+++ b/application/mobile/view/index/livelist.html
@@ -4,20 +4,25 @@
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0,user-scalable=no" />
 	    <title>视频列表</title>
-	    <link rel="stylesheet" href="__STATIC__/css/base.css">
-	    <script src="__STATIC__/js/rem.js"></script>
+	    <link rel="stylesheet" href="__STATIC__/css/public/base.css">
+	    <link rel="stylesheet" href="__STATIC__/css/public/head.css">
+	    <script src="__STATIC__/js/public/rem.js"></script>
 		<link rel="stylesheet" type="text/css" href="__STATIC__/css/index/livelist.css"/>
 	</head>
 	<body>
 		<div class="wrapper">
 			<!--头部-->
-			<div class="head_wrap">
+			<!--<div class="head_wrap">
 				<a class="left" href="javascript:history.back(-1)">
 					<img src="__STATIC__/images/play/left.png"/>
 				</a>
 				<h2 class="title">视频列表</h2>
 				
-			</div>
+			</div>-->
+			<div class="public_head">
+		        <i class="iconfont head_icon">&#xe63f;</i>
+		        <p>视频列表</p>
+		    </div>
 			<!--内容-->
 			<div class="content">
 				<div class="item_wrap">
