--- a/public/static/css/index/livelist.css
+++ b/public/static/css/index/livelist.css
@@ -3,34 +3,8 @@
 	height: 100%;
 }
 
-.head_wrap {
-	position: fixed;
-	top: 0;
-	left: 0;
-	z-index: 5;
-	width: 100%;
-	height: .6rem;
-	background: #fff;
-	border-bottom: 1px solid #e6e6e6;
-}
-.left {
-	margin-top: .1rem;
-	display: inline-block;
-	width: 10%;
-	height: .4rem;
-}
-.title {
-	display: inline-block;
-	font-size: .3rem;
-	width: 80%;
-	color: #151515;
-	text-align: center;
-	line-height: .6rem;
-	vertical-align: top;
-}
-
 .content {
-	padding: .6rem 0 2.35rem 0;
+	padding: 0rem 0 2.35rem 0;
 }
 .item_wrap {
 	margin: .21rem .24rem 0;
