--- a/application/live/view/live/index.html
+++ b/application/live/view/live/index.html
@@ -80,7 +80,7 @@ function join() {
         type: "POST",
         data:{appId:appId.value,channel:channel.value},
         async:false,
-        url: "index.php/live/live/getToken",
+        url: "live/getToken",
         success: function(data){
             channel_key = data;
         }
