--- a/application/live/view/live/index.html
+++ b/application/live/view/live/index.html
@@ -4,7 +4,7 @@
 <title>Agora Web Sample</title>
 <link rel="stylesheet" href="__STATIC__/css/bootstrap.min.css">
 <script src="__STATIC__/js/AgoraRTCSDK-2.6.1.js"></script>
-<script src="__STATIC__/js/jquery-3.3.1.min.js"></script>
+<script src="__STATIC__/js/public/jquery-3.3.1.min.js"></script>
 </head>
 
 <body>
