--- a/application/mobile/view/play/index.html
+++ b/application/mobile/view/play/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>主播-直播间</title>
-    <script src="__STATIC__/js/rem.js" type="text/javascript" charset="utf-8"></script>
-    <link rel="stylesheet" type="text/css" href="__STATIC__/css/base.css" />
+    <script src="__STATIC__/js/public/rem.js" type="text/javascript" charset="utf-8"></script>
+    <link rel="stylesheet" type="text/css" href="__STATIC__/css/public/base.css" />
     <link rel="stylesheet" href="__STATIC__/css/play/play.css">
 </head>
 <body>
@@ -99,6 +99,8 @@
                     </div>
                     <div class="endLive"><a href="./end_life.html">结束直播</a></div>
                 </div>
+
+              
                 
             </div>
 
@@ -134,7 +136,7 @@
         </div>
 
     </div>
-    <script src="__STATIC__/js/jquery-3.3.1.min.js"></script>
+    <script src="__STATIC__/js/public/jquery-3.3.1.min.js"></script>
     <script>
         $(function(){
             // 主播发红包
