--- a/public/static/css/play/viewer_room.css
+++ b/public/static/css/play/viewer_room.css
@@ -356,6 +356,65 @@
     color: #ffffff;
 }
 
+/* 发送内容框 */
+.send-group{
+    width: 100%;
+    min-height: .88rem;
+    color: #fff;
+    font-size: .3rem;
+    background-color: #fff;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    padding: 0 .24rem;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    visibility:hidden;
+}
+.send-group .textarea{
+    flex:1;
+    font-size:.3rem;
+    color:#151515;
+    min-height:.5rem;
+    line-height:.5rem;
+    max-height:1.3rem;
+    _height:1.3rem;
+    margin-left:auto;
+    margin-right:auto;
+    padding:.03rem;
+    outline:0;  
+    word-wrap:break-word;
+    overflow-x:hidden;
+    overflow-y:auto;
+    _overflow-y:visible;
+    -webkit-user-modify:read-write-plaintext-only; 
+    -webkit-user-select:text;
+}
+                
+.send-group .textarea[placeholder]:empty:before {
+    content: attr(placeholder); 
+}
+    
+.textarea[placeholder]:empty:focus:before{
+    content: "";
+} 
+
+.send-group .send-btn{
+    font-size: .3rem;
+    padding: .02rem .1rem;
+    background-color: #1e9f21;
+    border-radius: .06rem;
+    color: #ffffff;
+    opacity: .5;
+}
+        
+
 /* 遮罩层 */
 .mask{
     width: 100%;
