修改结束直播

--- a/application/mobile/view/play/end_life.html
+++ b/application/mobile/view/play/end_life.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>结束直播</title>
-    <script src="__STATIC__/js/rem.js" type="text/javascript" charset="utf-8"></script>
-    <link rel="stylesheet" type="text/css" href="__STATIC__/css/base.css" />
+    <script src="__STATIC__/js/public/rem.js" type="text/javascript" charset="utf-8"></script>
+    <link rel="stylesheet" type="text/css" href="__STATIC__/css/public/base.css" />
     <link rel="stylesheet" href="__STATIC__/css/play/end_life.css">
 </head>
 <body>
