--- a/public/static/css/play/viewer_room.css
+++ b/public/static/css/play/viewer_room.css
@@ -38,6 +38,7 @@
     -ms-flex-pack: justify;
     justify-content: space-between;
     position: relative;
+    margin-top: .2rem;
     margin-bottom: .1rem;
 }
 .topBar .viewer-info{
