--- a/application/mobile/view/index/live.html
+++ b/application/mobile/view/index/live.html
@@ -18,6 +18,8 @@
     <!-- 上传图片 -->
     <div class="live_uploading">
         <div class="uploading_img">
+            <input id="img" type="file" style="position:absolute;left:0;top:0;width:100%;height:100%;border:0;outline:none;opacity:0;z-index:10;">
+            <img class="up_img" src="__STATIC__/images/public/opacity.png" style="position:absolute;left:0;top:0;width:100%;height:100%;z-index:1;">
             <i class="iconfont uploading_icon">&#xe653;</i>
             <p class="uploading_text">设置封面</p>
         </div>
@@ -55,5 +57,27 @@
             开始直播
         </div>
     </div>
+    <script src="__STATIC__/js/public/jquery-3.3.1.min.js"></script>
+    <script>
+        $(function(){
+            $("#img").change(function (e) {
+                for (var i = 0; i < e.target.files.length; i++) {
+                    var file = e.target.files.item(i);
+                    //验证是否为图片，不是就跳出循环
+                    if (!(/^image\/.*$/i.test(file.type))) {
+                        alert("请选择图片上传！")
+                        continue;
+                    }
+                    //实例化FileReader API  
+                    var freader = new FileReader();
+                    freader.readAsDataURL(file);
+                    freader.onload = function (e) {
+                        $('.up_img').attr('src',e.target.result)
+                    }
+                    $("#img").val('');
+                }
+            });
+        })
+    </script>
 </body>
 </html>
